Check the GnuPG version first before setting the default arguments. GnuPG 1.x doesn't know about --debug-level which will cause it to fail.

BUG:250348

svn path=/trunk/KDE/kdeutils/kgpg/; revision=1203734